v0.1.4alfa ready for beta