@@ -9,20 +9,25 @@ import org.profinef.entity.Account;
 import org.profinef.entity.Client;
 import org.profinef.entity.Currency;
 import org.profinef.entity.Transaction;
-import org.profinef.service.ClientManager;
 import org.profinef.service.AccountManager;
+import org.profinef.service.ClientManager;
 import org.profinef.service.CurrencyManager;
 import org.profinef.service.TransManager;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestParam;
 
 import java.sql.Date;
 import java.sql.Timestamp;
 import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.IntStream;
 
 
@@ -38,7 +43,8 @@ public class AppController {
     private final CurrencyManager currencyManager;
 
 
-    public AppController(ClientManager clientManager, AccountManager accountManager, TransManager transManager, CurrencyManager currencyManager) {
+    public AppController(ClientManager clientManager, AccountManager accountManager, TransManager transManager,
+                         CurrencyManager currencyManager) {
         this.clientManager = clientManager;
         this.accountManager = accountManager;
         this.transManager = transManager;
@@ -57,7 +63,8 @@ public class AppController {
     }
 
     @GetMapping("/client_info")
-    public String viewClientTransactions(@RequestParam(name = "client_id", required = false, defaultValue = "0") int clientId,
+    public String viewClientTransactions(@RequestParam(name = "client_id", required = false, defaultValue = "0")
+                                             int clientId,
                                          @RequestParam(name = "currency_id", required = false) List<Integer> currencyId,
                                          @RequestParam(name = "date", required = false) Date date,
                                          HttpSession session) {
@@ -65,7 +72,7 @@ public class AppController {
             if (session.getAttribute("client") == null) {
                 return "redirect:/client";
             }
-            clientId = ((Client)session.getAttribute("client")).getId();
+            clientId = ((Client) session.getAttribute("client")).getId();
         }
         List<String> currencyName = new ArrayList<>();
         if (currencyId == null) {
@@ -82,11 +89,13 @@ public class AppController {
         }
         if (date == null) date = Date.valueOf(LocalDate.now());
         Client client = clientManager.getClient(clientId);
-        List<Transaction> transactions = transManager.findByClientForDate(clientId, currencyId, new Timestamp(date.getTime()));
+        List<Transaction> transactions = transManager.findByClientForDate(clientId, currencyId,
+                new Timestamp(date.getTime()));
         Map<String, Double> total = new HashMap<>();
         List<Currency> currencies = currencyManager.getAllCurrencies();
         for (Currency currency : currencies) {
-            List <Transaction> transactionList = transactions.stream().filter(transaction -> transaction.getCurrency().getId().equals(currency.getId())).collect(Collectors.toList());
+            List<Transaction> transactionList = transactions.stream().filter(transaction -> transaction.getCurrency()
+                    .getId().equals(currency.getId())).toList();
             if (transactionList.isEmpty()) {
                 total.put("balance" + currency.getId(), (double) 0);
             } else {
@@ -118,7 +127,6 @@ public class AppController {
     }
 
 
-
     @GetMapping("/add_transaction")
     public String addTransaction(HttpSession session) {
         List<Account> clients = accountManager.getAllAccounts();
@@ -145,22 +153,22 @@ public class AppController {
                 session.setAttribute("error", e.getMessage());
                 return "error";
             }
-        } else if(clientPhone != null && !clientPhone.isEmpty()){
+        } else if (clientPhone != null && !clientPhone.isEmpty()) {
             clients = new ArrayList<>();
             try {
                 clients.add(accountManager.getAccountByPhone(clientPhone));
-        } catch (Exception e) {
-            session.setAttribute("error", e.getMessage());
-            return "error";
-        }
-        } else if(clientTelegram != null && !clientTelegram.isEmpty()) {
+            } catch (Exception e) {
+                session.setAttribute("error", e.getMessage());
+                return "error";
+            }
+        } else if (clientTelegram != null && !clientTelegram.isEmpty()) {
             clients = new ArrayList<>();
             try {
                 clients.add(accountManager.getAccountByTelegram(clientTelegram));
             } catch (Exception e) {
-        session.setAttribute("error", e.getMessage());
-        return "error";
-    }
+                session.setAttribute("error", e.getMessage());
+                return "error";
+            }
         } else {
             clients = accountManager.getAllAccounts();
             clients.add(transManager.addTotal(clients));
@@ -175,10 +183,9 @@ public class AppController {
     }
 
 
-
     @GetMapping(path = "/edit")
     public String editTransactionPage(@RequestParam(name = "transaction_id") int transactionId,
-                                  HttpSession session) {
+                                      HttpSession session) {
         List<Account> clients = accountManager.getAllAccounts();
         session.setAttribute("clients", clients);
         List<Transaction> transactions = transManager.getTransaction(transactionId);
@@ -188,6 +195,7 @@ public class AppController {
         session.setAttribute("path", "/edit");
         return "editTransaction";
     }
+
     @PostMapping(path = "/edit")
     public String editTransaction(@RequestParam(name = "transaction_id") List<Integer> transactionId,
                                   @RequestParam(name = "client_name") List<String> clientName,
@@ -197,13 +205,14 @@ public class AppController {
                                   @RequestParam(name = "amount") List<Double> amount,
                                   @RequestParam(name = "transportation") List<Double> transportation,
                                   HttpSession session) {
-        try{
+        try {
             List<Integer> currencyId = new ArrayList<>();
             for (String name : currencyName) {
                 currencyId.add(currencyManager.getCurrency(name).getId());
             }
             for (int i = 0; i < clientName.size(); i++) {
-                transManager.update(transactionId.get(i), clientName.get(i), currencyId.get(i), rate.get(i), commission.get(i), amount.get(i), transportation.get(i));
+                transManager.update(transactionId.get(i), clientName.get(i), currencyId.get(i), rate.get(i),
+                        commission.get(i), amount.get(i), transportation.get(i));
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -222,14 +231,33 @@ public class AppController {
 
     @PostMapping(path = "/transaction")
     public String doTransaction(@RequestParam(name = "client_name") List<String> clientName,
-                                     @RequestParam(name = "currency_name") List<String> currencyName,
-                                     @RequestParam(name = "rate") List<Double> rate,
-                                     @RequestParam(name = "commission") List<Double> commission,
-                                     @RequestParam(name = "amount") List<Double> amount,
-                                     @RequestParam(name = "transportation") List<Double> transportation,
-                                     HttpSession session) {
+                                @RequestParam(name = "currency_name") List<String> currencyName,
+                                @RequestParam(name = "rate") List<Double> rate,
+                                @RequestParam(name = "commission") List<Double> commission,
+                                @RequestParam(name = "amount") List<Double> amount,
+                                @RequestParam(name = "transportation") List<Double> transportation,
+                                HttpSession session) {
 
-        try{
+        try {
+            if (amount.stream().filter(a -> a > 0).count() > 1) {
+                if (amount.stream().filter(a -> a < 0).count() > 1) {
+                    session.setAttribute("error", "Похоже, что данная транзакция может быть заменена на " +
+                            "несколько более простых. Пожалуйста выполните их отдельно");
+                    return "error";
+                }
+            }
+            List<String> clientDouble = new ArrayList<>();
+            List<String> currencyDouble = new ArrayList<>();
+            for (int i = 0; i < clientName.size(); i++) {
+                if (!clientDouble.contains(clientName.get(i))) {
+                    clientDouble.add(clientName.get(i));
+                    currencyDouble.add(currencyName.get(i));
+                } else if(currencyDouble.contains(currencyName.get(i))) {
+                    session.setAttribute("error", "Обнаружено наличие как минимум двух позиций с совпадением " +
+                            "значений клиента и валюты. Подобная операция не допустима");
+                    return "error";
+                }
+            }
             int transactionId = transManager.getAllTransactions()
                     .stream()
                     .flatMapToInt(t -> IntStream.of(t.getId()))
@@ -243,7 +271,8 @@ public class AppController {
                         currencyId.add(currencyManager.getCurrency(name).getId());
                     }
                     transManager.remittance(transactionId, null, clientName.get(i), currencyId.get(i), rate.get(i),
-                            commission.get(i), amount.get(i), transportation.get(i), null, null, null);
+                            commission.get(i), amount.get(i), transportation.get(i), null, null,
+                            null);
                 } catch (Exception e) {
                     session.setAttribute("error", e.getMessage());
                     return "error";
@@ -269,22 +298,32 @@ public class AppController {
         session.setAttribute("path", "/edit_client");
         return "addClient";
     }
+
     @PostMapping(path = "/new_client")
     public String saveNewClient(@RequestParam(name = "client_name") String clientName,
+                                @RequestParam(name = "client_id", required = false) int clientId,
                                 @RequestParam(name = "client_phone", required = false) String phone,
                                 @RequestParam(name = "client_telegram", required = false) String telegram,
                                 HttpSession session) {
-        Client client = new Client(clientName);
-        if (phone != null) {
+        Client client;
+        if (clientId <= 0) {
+            client = new Client(clientName);
+        } else {
+            client = clientManager.getClient(clientId);
+            client.setPib(clientName);
+        }
+        if (!phone.isEmpty()) {
             if (!phone.matches("\\+38 \\(0[0-9]{2}\\) [0-9]{3}-[0-9]{2}-[0-9]{2}")) {
-                session.setAttribute("error", "Номер телефона должен соответсвовать паттерну: +38 (011) 111-11-11");
+                session.setAttribute("error", "Номер телефона должен соответсвовать паттерну: " +
+                        "+38 (011) 111-11-11");
                 return "error";
             }
             client.setPhone(phone);
         }
-        if (telegram != null) {
+        if (!telegram.isEmpty()) {
             if (!telegram.matches("@[a-z._0-9]+")) {
-                session.setAttribute("error", "Телеграм тег должен начинаться с @ содержать латинские буквы нижнего регистра, цифры, \".\" или \"_\"");
+                session.setAttribute("error", "Телеграм тег должен начинаться с @ содержать латинские буквы " +
+                        "нижнего регистра, цифры, \".\" или \"_\"");
                 return "error";
             }
             client.setTelegram(telegram);
@@ -317,12 +356,17 @@ public class AppController {
         session.setAttribute("path", "/new_currency");
         return "addCurrency";
     }
+
     @PostMapping(path = "/new_currency")
     public String saveNewCurrency(@RequestParam(name = "currency_name") String currencyName,
-                                @RequestParam(name = "currency_id") int currencyId,
-                                HttpSession session) {
+                                  @RequestParam(name = "currency_id") int currencyId,
+                                  HttpSession session) {
         if (!currencyName.matches("[A-Z]{3}")) {
             session.setAttribute("error", "В названии должны быть три заглавные латинские буквы");
+            return "error";
+        }
+        if (currencyId < 100 || currencyId > 999) {
+            session.setAttribute("error", "Код должен состоять из трех цифр от 0 до 9");
             return "error";
         }
         Currency newCurrency = new Currency();
@@ -337,21 +381,21 @@ public class AppController {
         session.setAttribute("path", "/new_currency");
         return "redirect:/client";
     }
+
     @Transactional
     @PostMapping(path = "/save_colors", consumes = MediaType.APPLICATION_JSON_VALUE)
     public String saveColors(@RequestBody String colors, HttpSession session) throws JsonProcessingException {
-        System.out.println("success: " + colors);
-        List<List<String>> entryList = new ObjectMapper().readValue(colors, new TypeReference<>() {});
-        System.out.println(entryList);
+        List<List<String>> entryList = new ObjectMapper().readValue(colors, new TypeReference<>() {
+        });
         for (List<String> list : entryList) {
             String[] arrList = list.get(0).split("_");
-            Transaction transaction = transManager.getTransactionByClientAndByIdAndByCurrencyId(Integer.parseInt(arrList[1]), Integer.parseInt(arrList[2]), Integer.parseInt(arrList[3]));
+            Transaction transaction = transManager.getTransactionByClientAndByIdAndByCurrencyId(
+                    Integer.parseInt(arrList[1]), Integer.parseInt(arrList[2]), Integer.parseInt(arrList[3]));
             switch (arrList[0]) {
                 case "pib" -> transaction.setPibColor(list.get(1));
                 case "amount" -> transaction.setAmountColor(list.get(1));
                 case "balance" -> transaction.setBalanceColor(list.get(1));
             }
-            System.out.println(transaction);
             transManager.save(transaction);
         }
         session.setAttribute("path", "/save_colors");
